Fixed unreadable font color on darker backgrounds

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -43,3 +43,11 @@ h1 {
 .stars {
     cursor: pointer;
 }
+
+.white {
+    color: white;
+}
+
+.white-border {
+    border: 3px solid white;
+}
